# IoT-System-Programming-FIN4LE

./: CMakeLists.txt  README.md
include/: camera.hpp  gate.hpp  lcd.hpp  ocr.hpp  orc.hpp  sensor.hpp
lib/opencv/opencv-4.8.1/modules/calib3d/: CMakeLists.txt
src/: camera.cpp  gate.cpp  lcd.cpp  main.cpp  ocr.cpp  orc.cpp  sensor.cpp
